RESOLVED FIXED132086
Don't migrate the WKView.h header from WebCore to WebKit
https://bugs.webkit.org/show_bug.cgi?id=132086
Summary Don't migrate the WKView.h header from WebCore to WebKit
Anders Carlsson
Reported 2014-04-23 15:50:10 PDT
Don't migrate the WKView.h header from WebCore to WebKit
Attachments
Patch (11.46 KB, patch)
2014-04-23 15:54 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2014-04-23 15:54:35 PDT
WebKit Commit Bot
Comment 2 2014-04-23 15:56:18 PDT
Attachment 230016 [details] did not pass style-queue: ERROR: Source/WebCore/platform/WAKViewInternal.h:30: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebCore/platform/WAKViewInternal.h:35: One space before end of line comments [whitespace/comments] [5] ERROR: Source/WebCore/platform/WAKViewInternal.h:36: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 3 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2014-04-23 16:18:14 PDT
Note You need to log in before you can comment on or make changes to this bug.