Don't migrate the WKView.h header from WebCore to WebKit https://bugs.webkit.org/show_bug.cgi?id=132086

Reviewed by Dan Bernstein.

Source/WebCore:
* WebCore.xcodeproj/project.pbxproj:
Add WAKViewInternal.h.

* platform/WAKViewInternal.h: Added.

* platform/ios/wak/WAKClipView.m:
Import WAKViewInternal.h instead of WAKViewPrivate.h.

* platform/ios/wak/WAKScrollView.mm:
Import WAKViewInternal.h instead of WAKViewPrivate.h.

* platform/ios/wak/WAKView.h:
Move ivars to a class extension in WAKViewInternal.h and remove WKView.h import.

* platform/ios/wak/WAKView.mm:
Import WAKViewInternal.h instead of WAKViewPrivate.h.

* platform/ios/wak/WAKViewPrivate.h:
Import WKViewPrivate.h.

Source/WebKit/mac:
* MigrateHeaders.make:
Remove WKView.h from the list of headers to migrate.

* WebView/WebView.mm:
Import WKView.h.

Canonical link: https://commits.webkit.org/150145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167730 268f45cc-cd09-0410-ab3c-d52691b4dbfc