Source/WebCore/platform/ios/wak/WAKScrollView.mm
@@ -30,7 +30,7 @@
 
 #import "WAKAppKitStubs.h"
 #import "WAKClipView.h"
-#import "WAKViewPrivate.h"
+#import "WAKViewInternal.h"
 #import "WAKWindow.h"
 #import "WebEvent.h"
 
