Source/WebKit/mac/MigrateHeaders.make
@@ -214,7 +214,6 @@ all : \
     $(PRIVATE_HEADERS_DIR)/WKGraphics.h \
     $(PRIVATE_HEADERS_DIR)/WKTypes.h \
     $(PRIVATE_HEADERS_DIR)/WKUtilities.h \
-    $(PRIVATE_HEADERS_DIR)/WKView.h \
     $(PRIVATE_HEADERS_DIR)/WebAutocapitalize.h \
     $(PRIVATE_HEADERS_DIR)/WebCoreFrameView.h \
     $(PRIVATE_HEADERS_DIR)/WebCoreThread.h \
